Votes alignment issues

--- a/porick/public/css/base.css
+++ b/porick/public/css/base.css
@@ -10,6 +10,7 @@ body {
     float: left;
     display: block;
     margin-left: -10px;
+    margin-top: 18px;
 }
 .votes .vote {
     width: 15px;
@@ -55,6 +56,7 @@ body {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    min-height: 36px;
 }
 
 form.create_new_quote textarea {
